--- a/src/assets/templates/index.html
+++ b/src/assets/templates/index.html
@@ -11,10 +11,13 @@
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./index.css">
     <script type="module" src="./index.js"></script>
-    <title><APP_NAME></title>
+    <title>
+        <APP_NAME>
+    </title>
 </head>
 
 <body>
-    Hello PWA
+    Hello, PWA template!
 </body>
+
 </html>
