--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,12 +1,28 @@
-html {
-    height: 100%;
-}
-
-body {
+*, *::before, *::after {
     box-sizing: border-box;
+}
+
+* {
+    margin: 0;
+}
+
+html, body {
     height: 100%;
 }
 
-body * {
-    box-sizing: inherit;
+html {
+    line-height: 1.15;
+    -webkit-font-smoothing: antialiased;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+    font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
 }
